<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".activities.IntroActivity">

    <TextView
        android:id="@+id/app_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/app_txt_marginTop"
        android:text="@string/app_name"
        android:textColor="@color/colourAccent"
        android:textSize="@dimen/app_txt_size"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/intro_img_marginTop"
        android:contentDescription="@string/sign_in_bg_txt"
        android:src="@drawable/ic_task_image" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_text_marginTop"
        android:text="@string/intro_txt_title"
        android:textColor="@color/primary_text_colour"
        android:textSize="@dimen/title_text_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/title_text_marginStartEnd"
        android:layout_marginTop="@dimen/desc_text_marginTop"
        android:layout_marginEnd="@dimen/title_text_marginStartEnd"
        android:gravity="center"
        android:lineSpacingExtra="@dimen/title_text_line_spacing_extra"
        android:text="@string/intro_txt_description"
        android:textColor="@color/secondary_text_colour"
        android:textSize="@dimen/desc_text_size" />

    <Button
        android:id="@+id/sign_in_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/intro_btn_marginStartEnd"
        android:layout_marginTop="@dimen/desc_text_marginTop"
        android:layout_marginEnd="@dimen/intro_btn_marginStartEnd"
        android:background="@drawable/shape_button_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_in_btn"
        android:textColor="@android:color/white"
        android:textSize="@dimen/btn_text_size" />

    <Button
        android:id="@+id/sign_up_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/intro_btn_marginStartEnd"
        android:layout_marginTop="@dimen/sign_up_btn_marginTop"
        android:layout_marginEnd="@dimen/intro_btn_marginStartEnd"
        android:background="@drawable/white_border_rounded"
        android:foreground="?attr/selectableItemBackground"
        android:gravity="center"
        android:paddingTop="@dimen/btn_paddingTopBottom"
        android:paddingBottom="@dimen/btn_paddingTopBottom"
        android:text="@string/sign_up_btn"
        android:textColor="@color/colourAccent"
        android:textSize="@dimen/btn_text_size" />
</LinearLayout>