<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.learning.projectmanager.activities.CardDetailsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.ProjectManager.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/card_details_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colourPrimary"
            app:popupTheme="@style/Theme.ProjectManager.PopupOverlay"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/intro_background"
        android:orientation="vertical"
        android:padding="@dimen/details_content_padding">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/details_card_name_marginBottom"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_rad">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/details_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/card_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_card_name_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textSize="@dimen/edit_txt_size"/>
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_rad">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/details_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_colour_txt"
                    android:textColor="@color/secondary_text_colour"
                    android:textSize="@dimen/details_label_txt_size" />

                <TextView
                    android:id="@+id/select_label_colour"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_value_marginTop"
                    android:padding="@dimen/details_content_padding"
                    android:text="@string/select_colour_txt"
                    android:textColor="@color/primary_text_colour" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_members_label_marginTop"
                    android:text="@string/members_txt"
                    android:textColor="@color/secondary_text_colour"
                    android:textSize="@dimen/details_label_txt_size" />

                <TextView
                    android:id="@+id/select_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_value_marginTop"
                    android:padding="@dimen/details_content_padding"
                    android:text="@string/select_members_txt"
                    android:textColor="@color/primary_text_colour" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/assigned_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_value_marginTop"
                    android:visibility="gone"
                    tools:visibility="visible"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_members_label_marginTop"
                    android:text="@string/due_date_txt"
                    android:textColor="@color/secondary_text_colour"
                    android:textSize="@dimen/details_label_txt_size" />

                <TextView
                    android:id="@+id/select_due_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/details_value_marginTop"
                    android:padding="@dimen/details_content_padding"
                    android:text="@string/select_due_date_txt"
                    android:textColor="@color/primary_text_colour" />

                <Button
                    android:id="@+id/update_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/details_update_btn_marginTop"
                    android:background="@drawable/shape_button_rounded"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/update_btn"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/btn_text_size"
                    app:backgroundTint="@null" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>