<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/search_elevation"
        app:cardCornerRadius="@dimen/search_corner_rad"
        android:background="@drawable/shape_button_rounded"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/member_padding">

            <TextView
                android:id="@+id/dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/search_title_padding"
                android:layout_gravity="start"
                android:text="@string/search_member_txt"
                android:textStyle="bold"
                android:textColor="@color/primary_text_colour"
                android:textSize="@dimen/search_title_txt_size" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/divider_height"
                android:layout_marginTop="@dimen/search_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/search_divider_marginTopBottom"
                android:background="@color/divider_colour"/>

            <EditText
                android:id="@+id/search_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/search_email_marginTop"
                android:hint="@string/email_hint"
                android:autofillHints="@string/email_hint"
                android:inputType="textEmailAddress" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/search_action_layout_height"
                android:layout_marginTop="@dimen/search_action_layout_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add_member_to_project"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/add_btn"
                    android:gravity="center"
                    android:textColor="@color/colourAccent"
                    android:textSize="@dimen/search_btn_txt_size"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/cancel_action"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/cancel_btn"
                    android:gravity="center"
                    android:textColor="@color/secondary_text_colour"
                    android:textSize="@dimen/search_btn_txt_size" />


            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>