<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_in_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/sign_in_btn"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/primary_text_colour"/>
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/authentication_marginTop"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_marginStartEnd"
            android:gravity="center"
            android:text="@string/sign_in_desc"
            android:textColor="@color/secondary_text_colour"
            android:textSize="@dimen/authentication_desc_txt_size" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/authentication_marginStartEnd"
            android:layout_marginEnd="@dimen/authentication_marginStartEnd"
            android:layout_marginTop="@dimen/authentication_card_marginTop"
            android:layout_marginBottom="@dimen/authentication_marginTop"
            android:elevation="@dimen/card_elevation"
            app:cardCornerRadius="@dimen/card_corner_rad">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/card_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colourAccent"
                    app:hintTextColor="@color/colourAccent"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_email_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textSize="@dimen/edit_txt_size"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxStrokeColor="@color/colourAccent"
                    app:hintTextColor="@color/colourAccent"
                    style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edit_password_txt"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textSize="@dimen/edit_txt_size"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/intro_btn_marginStartEnd"
                    android:layout_marginTop="@dimen/desc_text_marginTop"
                    android:layout_marginEnd="@dimen/intro_btn_marginStartEnd"
                    android:background="@drawable/shape_button_rounded"
                    app:backgroundTint="@null"
                    android:foreground="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:paddingTop="@dimen/btn_paddingTopBottom"
                    android:paddingBottom="@dimen/btn_paddingTopBottom"
                    android:text="@string/sign_in_btn"
                    android:textColor="@color/white"
                    android:textSize="@dimen/btn_text_size" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>
    </LinearLayout>
</LinearLayout>