<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/intro_background"
    android:orientation="vertical"
    tools:context=".activities.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/sign_up_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/colourPrimary">

        <TextView
            android:id="@+id/title_toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/create_board_toolbar_txt"
            android:textStyle="bold"
            android:textSize="@dimen/toolbar_text_size"
            android:textColor="@color/white"/>
    </androidx.appcompat.widget.Toolbar>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/authentication_marginStartEnd"
        android:layout_marginEnd="@dimen/authentication_marginStartEnd"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:elevation="@dimen/card_elevation"
        app:cardCornerRadius="@dimen/card_corner_rad">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/card_content_padding">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/edit_board_img"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                app:civ_circle_background_color="@color/light_grey"
                android:src="@drawable/grey_bg"
                app:civ_border_width="@dimen/nav_image_border_width"
                app:civ_border_color="@color/white"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/board_name_txt"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/colourAccent"
                app:hintTextColor="@color/colourAccent"
                style="@style/Widget.Material3.TextInputEditText.OutlinedBox">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edit_board_name_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/board_name_txt"
                    android:inputType="text"
                    android:textSize="@dimen/edit_txt_size"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/create_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/intro_btn_marginStartEnd"
                android:layout_marginTop="@dimen/desc_text_marginTop"
                android:layout_marginEnd="@dimen/intro_btn_marginStartEnd"
                android:background="@drawable/shape_button_rounded"
                app:backgroundTint="@null"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_paddingTopBottom"
                android:paddingBottom="@dimen/btn_paddingTopBottom"
                android:text="@string/create_txt"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_text_size" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



</LinearLayout>